JDK-15 options